Spacing and alignment fixes

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -17,7 +17,7 @@ a:link, a:visited{
 }
 
 a:hover{
-    color: #e15205;
+    color: #ea2d65;
 }
 	
 acronym,abbr{
